# prismo

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  biome.jsonc  environment.yml  environment_no_build.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  index.md  modeldescription.md  references.bib
docs/_templates/: autosummary_core
docs/_templates/autosummary/: class.rst
docs/api/: core.md  index.md  plotting.md  tools.md
docs/notebooks/: example.ipynb  getting_started.ipynb  mofaflex_for_mofa_users_cll.ipynb  prismo_for_mofa_users_cll.ipynb
notebooks/DLPFC/: analysis.ipynb  ensembl_to_symbol.txt
notebooks/allelic_mouse_fibroblasts/: data_loader.py
notebooks/allelic_mouse_spermatids/: data_loader.py
notebooks/cll/: analysis.ipynb  data_loader.py
notebooks/cll/data/: metadata.txt
notebooks/cll/model_20240621_230205/: params.save
notebooks/mefisto_evodevo/: data_loader.py  mefisto_evodevo.ipynb
notebooks/mefisto_microbiome/: data_loader.py  mefisto_microbiome.ipynb
notebooks/mefisto_multidimensional/: data_loader.py  mefisto_multidimensional.ipynb
notebooks/mefisto_scnmt/: data_loader.py  mefisto_scnmt.ipynb
notebooks/mefisto_umap/: data_loader.py
notebooks/mefisto_visium/: analysis.ipynb  data_download.sh  data_loader.py  download.sh  mefisto_visium.ipynb  mofapy2.ipynb  run_mefisto.py  run_prismo.py  utils.py
notebooks/mofa_cll/: analysis.ipynb  data_loader.py
notebooks/mouse_fibroblasts/: analysis.ipynb  data_loader.py
notebooks/mouse_fibroblasts/data/: download.sh
notebooks/mouse_spermatids/: analysis.ipynb  data_loader.py
notebooks/mouse_spermatids/data/: chroms.csv  download.sh  genes.txt  metadata.txt
notebooks/muvi_experiments/: 1_basic_tutorial.ipynb  2_single-cell_kang.ipynb
notebooks/nsf_slideseq/: analysis.ipynb  data_download.R  data_loader.py  run_nsf.ipynb
notebooks/synthetic/: synthetic_beta_binomial.ipynb  synthetic_gp_1d.ipynb  synthetic_gp_2d.ipynb  synthetic_normal.ipynb  utils.py
notebooks/xenium_breast_cancer/: data_loader.py  download.sh  utils.py
notebooks/xenium_breast_cancer_old/: analysis_gaussian.ipynb  analysis_nonnegative.py
src/famo/: __init__.py  _dist.py  benchmark.py  core.py  dist.py  feature_sets.py  gp.py  log.conf  model.py  plotting.py  synthetic.py  utils_data.py  utils_downstream.py  utils_io.py  utils_training.py
src/famo/utils/: data.py  downstream.py  io.py
src/mofaflex/_core/: gp.py  io.py  model.py  mofaflex.py  preprocessing.py  presets.py  utils.py
src/mofaflex/_core/datasets/: __init__.py  anndatadictdataset.py  base.py  misc.py  mudatadataset.py  utils.py
src/mofaflex/_core/likelihoods/: base.py  bernoulli.py  negativebinomial.py  normal.py
src/mofaflex/_core/pyro/: __init__.py
src/mofaflex/_core/pyro/likelihoods/: __init__.py  base.py  bernoulli.py  negativebinomial.py  normal.py
src/prismo/: __init__.py  benchmark.py  downstream.py  gp.py  io.py  model.py  plotting.py  preprocessing.py  prismo.py  training.py
src/prismo/_core/: __init__.py  datasets.py  feature_sets.py  gp.py  io.py  model.py  pcgse.py  preprocessing.py  presets.py  prismo.py  settings.py  utils.py
src/prismo/_core/datasets/: __init__.py  anndatadictdataset.py  base.py  misc.py  mudatadataset.py  utils.py
src/prismo/_pl/: __init__.py  plotting.py
src/prismo/_tl/: __init__.py  synthetic.py
src/prismo/pl/: _plotting.py
src/prismo/tl/: __init__.py  _downstream.py  _msigdb.py  _synthetic.py
tests/: conftest.py  test_anndatadictdataset.py  test_basic.py  test_custom_sparse_ops.py  test_datagenerator.py  test_featureset.py  test_match.py  test_mofaflex_integration.py  test_mudatadataset.py  test_pcgse.py  test_plots.py  test_preprocessing.py  test_preprocessing_centerscale.py  test_preprocessing_constant_features.py  test_preprocessing_likelihoods.py  test_prismo_integration.py  test_save_load_model.py  test_utils_data.py  utils.py
tests/data/: cll_model.h5  mousebrain_model.h5
tests/plots/: cll_model.h5  mousebrain_model.h5  mousebrain_model_informed.h5
tests/utils_data/: test_utils_data.py
tests/utils_io/: test_save_load_model.py
